<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_margin="15dp"
        android:id="@+id/tv1"></TextView>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv1"
        android:id="@+id/name"></EditText>
    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/tv2"
        android:layout_margin="15dp"
        android:layout_below="@+id/tv1"></TextView>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/email"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/tv2"></EditText>
    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:id="@+id/tv3"
        android:layout_margin="15dp"
        android:layout_below="@+id/tv2"></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/phone"
        android:layout_below="@+id/email"
        android:layout_toRightOf="@+id/tv3"
        ></EditText>
    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/create_password"
        android:id="@+id/tv4"
        android:layout_margin="15dp"
        android:layout_below="@+id/tv3"></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/pass"
        android:layout_below="@+id/phone"
        android:layout_toRightOf="@+id/tv4"></EditText>
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/re_type_password"
        android:id="@+id/tv5"
        android:layout_margin="10dp"
        android:layout_below="@+id/tv4"></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/pass2"
        android:layout_below="@+id/pass"
        android:layout_toRightOf="@+id/tv5"></EditText>
    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/but"
        android:onClick="sign_up"
        android:layout_margin="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv5"></Button>

</RelativeLayout>